gcc/testsuite/rust/rustc/ui/issues/issue-46471-1.rs
fn main() {
    let y = {
        let mut z = 0;
        &mut z
    };
// { dg-error ".E0597." "" { target *-*-* } .-2 }
    println!("{}", y);
}

